--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-561-purple-buzz
                     </p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="Marawis/logo.jpeg"style="border-radius:20px;">
+                    <img src="Marawis/logo.jpeg"width="400"height="" style="border-radius:20px;">
                 </div>
             </div>
         </div>
