--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     <p class="light-300">Disini Adalah Link Grup Rawi Kalian Bisa Gabung Di Grup Tersebut Teman-Teman</p>
                 </div>
                 <div class="col-lg-3 col-12 pt-4">
-                    <a href="#" class="btn btn-primary rounded-pill btn-block shadow px-4 py-2">Gabung Sekarang</a>
+                    <a href="https://chat.whatsapp.com/H8GAkZMdZ6dJI2dsc6zOEB" class="btn btn-primary rounded-pill btn-block shadow px-4 py-2">Gabung Sekarang</a>
                 </div>
             </div>
         </div>
